Model Schemas, specs and some minor refinements
