# config/routes.rb
@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 
 Rails.application.routes.draw do
+  resources :showings
   root to: redirect('/api-docs')
 
   resources :movies, only: %i[show index]
